--- a/Projeto_DataScience.ipynb
+++ b/Projeto_DataScience.ipynb
@@ -1180,7 +1180,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#FALTA EXIBIR O RESULTADO\n",
+        "#EXIBIR O RESULTADO\n",
         "dre_19['Status'] = np.where(dre_19.CD_CVM == dre_20.CD_CVM, 'Não Faliu', 'Faliu')\n",
         "dre_19"
       ],
@@ -1424,8 +1424,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#WILLIAN \n",
-        "# Baggin : Bootstrap AGGregating (Vi na aula do Howard) vai testar o modelo.\n",
+        "# Baggin : Bootstrap AGGregating\n",
         "\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.metrics import mean_absolute_error\n",
@@ -1445,8 +1444,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#WILLIAN\n",
-        "#Vi na aula do Howard\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "y = df_dre.Falir S/N #variavel dependente\n",
