Identificação das colunas DS_CONTA

--- a/Projeto_DataScience.ipynb
+++ b/Projeto_DataScience.ipynb
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "98X_Gy0rfVCD"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Tratamento DataFrame"
+        "#Seleção dos dados"
       ],
       "metadata": {
         "id": "7mIKuoPKwFpR"
@@ -102,10 +102,15 @@
       "cell_type": "code",
       "source": [
         "dre_10 = pd.read_csv(f'CVM/dfp_cia_aberta_DRE_ind_2010.csv',sep=';',decimal=',',encoding='ISO-8859-1')\n",
-        "dre_10.head()"
+        "dre_10['DS_CONTA'] = dre_10['DS_CONTA'].str.lower()\n",
+        "dre_10.VL_CONTA = dre_10.VL_CONTA.astype(float)\n",
+        "dre_10 = dre_10.pivot_table(index=['CD_CVM','CNPJ_CIA','DENOM_CIA','MOEDA','ESCALA_MOEDA','DT_INI_EXERC','DT_FIM_EXERC'], columns=['DS_CONTA'], values='VL_CONTA').reset_index().rename_axis(None, axis=1)#.fillna(0)\n",
+        "pd.set_option('display.expand_frame_repr', False)\n",
+        "pd.set_option('max_rows', 99999)\n",
+        "dre_10.count()"
       ],
       "metadata": {
-        "id": "X_bxc74Pe5HY"
+        "id": "yaJUmD9qj-rw"
       },
       "execution_count": null,
       "outputs": []
@@ -113,34 +118,92 @@
     {
       "cell_type": "code",
       "source": [
-        "dre_10.info()"
+        "#ENCONTRAR DS_CONTA PARA USAR NO MODELO\n",
+        "dre_10 = pd.read_csv(f'CVM/dfp_cia_aberta_DRE_ind_2010.csv',sep=';',decimal=',',encoding='ISO-8859-1')\n",
+        "dre_10['DS_CONTA'] = dre_10['DS_CONTA'].str.lower()\n",
+        "dre_10.VL_CONTA = dre_10.VL_CONTA.astype(float)\n",
+        "df = dre_10.loc[dre_10['DS_CONTA'].str.contains(\"lucro\", case=False)]\n",
+        "DataTable(df[['DS_CONTA','VL_CONTA']].drop_duplicates(subset=['DS_CONTA'], keep='first'))\n",
+        "#SCRIPT APENAS PARA APOIO"
       ],
       "metadata": {
-        "id": "UCUxw7pWf_xd"
+        "id": "pe6TAWpiCK7V"
       },
       "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Tratamento DataFrame"
+      ],
+      "metadata": {
+        "id": "e01gijFI7O2v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "dre_10 = pd.read_csv(f'CVM/dfp_cia_aberta_DRE_ind_2010.csv',sep=';',decimal=',',encoding='ISO-8859-1')\n",
         "dre_10 = dre_10[dre_10.ORDEM_EXERC == 'ÚLTIMO']\n",
-        "dre_10 = dre_10[dre_10.DS_CONTA.isin(['Lucro ou Prejuízo Líquido do Período','Despesas com Pessoal','Outras Despesas de Administrativas','Despesas Tributárias',\n",
-        "                                      'Outras Receitas Operacionais','Outras Despesas Operacionais','Resultado antes dos Tributos sobre o Lucro',\n",
-        "                                      'Corrente','Participações'])]\n",
+        "dre_10['DS_CONTA'] = dre_10['DS_CONTA'].str.lower()\n",
+        "dre_10 = dre_10[dre_10.DS_CONTA.isin(['lucro/prejuízo do período', 'receitas', 'receita', 'receita operacional líquida', 'outras receitas operacionais',\n",
+        "                                      'receitas de prestação de serviços', 'receita de venda de bens e/ou serviços', 'receitas financeiras',\n",
+        "                                      'outras despesas/receitas operacionais', 'outras despesas/receitas oper. líquidas',\n",
+        "                                      'despesas de pessoal', 'despesas com pessoal', 'outras despesas administrativas', 'outras despesas operacionais', \n",
+        "                                      'despesas financeiras', 'despesas tributárias', 'despesas tributarias', 'resultado operacional', 'resultado financeiro'\n",
+        "                                      ,'Participações', 'participações dos adm. e colaboradores', 'participação dos empregados e administradores'])]\n",
+        "\n",
+        "                                      Corrente\n",
+        "                                      Custo dos Bens e/ou Serviços Vendidos\n",
+        "                                      Despesas Financeiras\n",
+        "                                      Despesas Gerais e Administrativas\n",
+        "                                      Despesas com Vendas\n",
+        "                                      Despesas/Receitas Operacionais\n",
+        "                                      Diferido\n",
+        "                                      Ganhos/Perdas Líquidas sobre Ativos de Operações Descontinuadas\n",
+        "                                      Imposto de Renda e Contribuição Social sobre o Lucro\n",
+        "                                      Lucro Básico por Ação\n",
+        "                                      Lucro Diluído por Ação\n",
+        "                                      Lucro/Prejuízo do Período\n",
+        "                                      Outras Despesas Operacionais\n",
+        "                                      Outras Receitas Operacionais\n",
+        "                                      Perdas pela Não Recuperabilidade de Ativos\n",
+        "                                      Receita de Venda de Bens e/ou Serviços\n",
+        "                                      Receitas Financeiras\n",
+        "                                      Resultado Antes do Resultado Financeiro e dos Tributos\n",
+        "                                      Resultado Antes dos Tributos sobre o Lucro                                                     \n",
+        "                                      Resultado Bruto                                                                                  \n",
+        "                                      Resultado Financeiro                                                                       \n",
+        "                                      Resultado Líquido das Operações Continuadas                                                     \n",
+        "                                      Resultado Líquido de Operações Descontinuadas\n",
+        "                                      Resultado de Equivalência Patrimonial                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
+        "\n",
+        "\n",
+        "#juntar ('receitas', 'receita' / 'despesas de pessoal', 'despesas com pessoal' /  'despesas tributárias', 'despesas tributarias' / 'participações dos adm. e colaboradores', 'participação dos empregados e administradores')\n",
         "dre_10 = dre_10[['CD_CVM','CNPJ_CIA','DENOM_CIA','MOEDA','ESCALA_MOEDA','DT_INI_EXERC','DT_FIM_EXERC','DS_CONTA','VL_CONTA']] \n",
         "dre_10.VL_CONTA = dre_10.VL_CONTA.astype(float)\n",
         "dre_10 = dre_10.pivot_table(index=['CD_CVM','CNPJ_CIA','DENOM_CIA','MOEDA','ESCALA_MOEDA','DT_INI_EXERC','DT_FIM_EXERC'], columns=['DS_CONTA'], values='VL_CONTA').reset_index().rename_axis(None, axis=1).fillna(0)\n",
+        "dre_10['Receita'] = dre_10['receitas'] + dre_10['receita']\n",
+        "dre_10['Despesa de Pessoal'] = dre_10['despesas de pessoal'] + dre_10['despesas com pessoal']\n",
+        "dre_10['Despesa Tributaria'] = dre_10['despesas tributárias'] + dre_10['despesas tributarias']\n",
+        "dre_10['PLR'] = dre_10['participações dos adm. e colaboradores'] + dre_10['participação dos empregados e administradores']\n",
+        "\n",
+        "dre_10.drop(['receitas','receita','despesas de pessoal','despesas com pessoal','despesas tributárias','despesas tributarias',\n",
+        "                'participações dos adm. e colaboradores','participação dos empregados e administradores'],axis=1,inplace=True)\n",
         "\n",
         "dre_20 = pd.read_csv(f'CVM/dfp_cia_aberta_DRE_ind_2020.csv',sep=';',decimal=',',encoding='ISO-8859-1')\n",
         "dre_20 = dre_20[dre_20.ORDEM_EXERC == 'ÚLTIMO']\n",
         "\n",
-        "dre_10['Resultado'] = dre_10.CNPJ_CIA.isin(dre_20.CNPJ_CIA).replace({True: 'Não Faliu', False: 'Faliu'})"
+        "dre_10['Resultado'] = dre_10.CNPJ_CIA.isin(dre_20.CNPJ_CIA).replace({True: 'Não Faliu', False: 'Faliu'})\n",
+        "#dre_10.describe()\n",
+        "DataTable.max_columns = 30\n",
+        "DataTable(dre_10)"
       ],
       "metadata": {
         "id": "YiZqeWoUglhn"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -473,10 +536,13 @@
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "y = dre_10.Resultado #variavel dependente\n",
-        "x = dre_10.drop(['Resultado'], axis=1) #variaveis independentes\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, confusion_matrix, precision_recall_curve\n",
         "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.8, test_size=0.2, randon_state = 0)"
+        "\n",
+        "y = dre_10.Resultado #variavel dependente\n",
+        "x = dre_10.drop(['Resultado','CD_CVM','CNPJ_CIA','DENOM_CIA','MOEDA','ESCALA_MOEDA','DT_INI_EXERC','DT_FIM_EXERC'], axis=1) #variaveis independentes\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.8, test_size=0.2, random_state = 0)"
       ],
       "metadata": {
         "id": "lGO-b55QTcE3"
@@ -487,20 +553,124 @@
     {
       "cell_type": "code",
       "source": [
-        "#PASSAR PARAMETROS DO MACHINE LEARNING\n",
+        "dre_10"
+      ],
+      "metadata": {
+        "id": "s1fI-V7jA0Ps"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CMatrix(CM, labels=['Faliu', 'Não faliu']):\n",
+        "  df = pd.DataFrame(data=CM, index=labels, columns=labels)\n",
+        "  df.index.name='TRUE'\n",
+        "  df.columns.name='PREDICTION'\n",
+        "  df.loc['Total'] = df.sum()\n",
+        "  df['Total'] = df.sum(axis=1)\n",
+        "  return df"
+      ],
+      "metadata": {
+        "id": "pGpyab6d7s2f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "metrics = pd.DataFrame(index=['Accuracy','Precision','Recall'],\n",
+        "                       columns=['LogisticReg','ClassTree','NaiveBayes'])"
+      ],
+      "metadata": {
+        "id": "cuA_s4ZY8zWH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "logistic_regression = LogisticRegression(n_jobs=-1, random_state=0)\n",
+        "logistic_regression.fit(x_train, y_train)\n",
+        "y_pred_test = logistic_regression.predict(x_test)\n",
+        "metrics.loc['Accuracy','LogisticReg'] = accuracy_score(y_pred=y_pred_test, y_true=y_test)\n",
+        "metrics.loc['Precision','LogisticReg'] = precision_score(y_pred=y_pred_test, y_true=y_test)\n",
+        "metrics.loc['Recall','LogisticReg'] = recall_score(y_pred=y_pred_test, y_true=y_test)\n",
+        "\n",
+        "CM = confusion_matrix(y_pred=y_pred_test, y_true=y_test)\n",
+        "CMatrix(CM)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        },
+        "id": "rjqMJDSD7m78",
+        "outputId": "8844e4e2-10b1-45f2-e46c-9d15d3c6f6bb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-45-48463a735f24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0my_pred_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogistic_regression\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'LogisticReg'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_pred_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Precision'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'LogisticReg'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_pred_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Recall'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'LogisticReg'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_pred_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mprecision_score\u001b[0;34m(y_true, y_pred, labels, pos_label, average, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1763\u001b[0m         \u001b[0mwarn_for\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"precision\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1764\u001b[0m         \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1765\u001b[0;31m         \u001b[0mzero_division\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mzero_division\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1766\u001b[0m     )\n\u001b[1;32m   1767\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mprecision_recall_fscore_support\u001b[0;34m(y_true, y_pred, beta, labels, pos_label, average, warn_for, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1542\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1543\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"beta should be >=0 in the F-beta score\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1544\u001b[0;31m     \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_set_wise_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1545\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1546\u001b[0m     \u001b[0;31m# Calculate tp_sum, pred_sum, true_sum ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_set_wise_labels\u001b[0;34m(y_true, y_pred, average, labels, pos_label)\u001b[0m\n\u001b[1;32m   1355\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpresent_labels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1356\u001b[0m                     raise ValueError(\n\u001b[0;32m-> 1357\u001b[0;31m                         \u001b[0;34mf\"pos_label={pos_label} is not a valid label. It \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1358\u001b[0m                         \u001b[0;34mf\"should be one of {present_labels}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1359\u001b[0m                     )\n",
+            "\u001b[0;31mValueError\u001b[0m: pos_label=1 is not a valid label. It should be one of ['Faliu', 'Não Faliu']"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Baggin : Bootstrap AGGregating\n",
         "\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "\n",
         "def score_dataset (x_train, x_test, y_train, y_test):\n",
-        "  model = RandomForestRegressor(n_estimators=100, randon_state=0)\n",
+        "  model = RandomForestRegressor(n_estimators=100, random_state=0)\n",
         "  model.fit(x_train, y_train)\n",
         "  preds = model.predict(x_test)\n",
         "  return mean_absolute_error(y_test, preds) #Quanto menor melhor"
       ],
       "metadata": {
         "id": "Cl61k1bCBc12"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#individual predictions\n",
+        "https://www.youtube.com/watch?v=zUqa6KcwRhs"
+      ],
+      "metadata": {
+        "id": "jknxjZVv1vtm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ind_prediction(nova_empresa):\n",
+        "  data = new_data.values.reshape(1,-1)\n",
+        "  data = robust_scaler.transform(data)\n",
+        "  prob = logistic_regression.predict_proba(data)[0][1]\n",
+        "  return prob"
+      ],
+      "metadata": {
+        "id": "OrzwsDbg000O"
       },
       "execution_count": null,
       "outputs": []
